List Style not being able to override, will come back tomorrow

--- a/index.html
+++ b/index.html
@@ -128,9 +128,16 @@
             </div>
             <div class="col">
                 <div class="card mt-3 p-3 m-3" style="width: 18rem;">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-img-top" src="./assets/freeLancer.svg" alt="yelpCamp">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">YelpCamp project from Colt Steele Web Developer BootCamp</p>
+                      <ul>
+                          <li class="techUsed">MongoDB</li>
+                          <li class="techUsed">Node.js</li>
+                          <li class="techUsed">Express</li>
+                          <li class="techUsed">HTML5</li>
+                          <li class="techUsed">CSS</li>
+                      </ul>
                     </div>
                   </div>
             </div>
@@ -142,8 +149,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
-                <div class="card mt-3 p-3 m-3" style="width: 18rem;">
+            <div class="col"><div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="..." alt="Card image cap">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
