--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
         </div>
     </section>
     <!-- skillset close -->
+    <!-- portfolioSection open -->
     <section class="myPort">
         <div class="row">
             <div class="col">
@@ -150,10 +151,21 @@
             </div>
           
         </div>
-    
     </section>
-    <footer class="footer bg-dark">
-        <p>Chal Fut</p>
+    <!-- portfolioSection close -->
+    <section class="contact text-center">
+        <div class="row">
+            <div class="col-4"><h1 class="rocket" style="color:b"><i class="fas fa-rocket"></i></h1></div>
+            <div class="col mt-2 py-3">
+                <h1 class="getContact"><span style="color:red">L</span>et<span style="color:red">'</span>s get&nbsp;<span style="color:red">C</span>onnected
+                    </h1>
+                    <p class="getContact"> If I sound like someone you would like to work with , please contact me on LinkedIn.</p>
+                    <p class="getContact"> I would love to give you my email, but the prince is looking to dispose his money and is constantly emailing me! </p>
+            </div>
+        </div>
+    </section>
+    <footer class="footer text-center bg-dark">
+        <span style="color:white">Made with by <span style="color:red">&hearts; </span>by Samip Pokharel</span>
     </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
