--- a/index.html
+++ b/index.html
@@ -140,6 +140,16 @@
                   </div>
             </div>
             <div class="col">
+                <div class="card mt-3 p-3 m-3" style="width: 18rem;">
+                    <img class="card-img-top" src="./assets/freeLancer.svg" alt="yelpCamp">
+                    <div class="card-body">
+                        <h5 class="card-title text-center mt-2 display-7">YelpCamp</h5>
+                      <p class="card-text">YelpCamp project from Colt Steele Web Developer BootCamp.</p>
+                      <p class="card-text"><a href="https://github.com/comingback2life/YelpCamp"> <i class="fab fa-github projectLinks"></i></a></p>
+                    </div>
+                  </div>
+            </div>
+            <div class="col">
                 <div class="card mt-3 p-3" style="width: 18rem;">
                     <img class="card-img-top" src="./assets/movie.svg" alt="yelpCamp">
                     <div class="card-body">
@@ -153,7 +163,7 @@
         </div>
     </section>
     <!-- portfolioSection close -->
-    <section class="contact text-center">
+    <section class="contact mb-2 text-center">
         <div class="row">
             <div class="col-4"><h1 class="rocket" style="color:b"><i class="fas fa-rocket"></i></h1></div>
             <div class="col mt-2 py-3">
